# pdf2anki

./: .env.example  .gitignore  .secrets.baseline  CLAUDE.md  LICENSE  README.ja.md  README.md  config.yaml  pyproject.toml
docs/: 2026-02-08_CODE_REVIEW_FIXES.md  CONTRIB.md  RELEASE_RESEARCH.md  RUNBOOK.md  linkedin-draft.md  security-checklist.md  zenn-draft.md
docs/plans/: 2026-02-08_PLAN_pdf2anki.md  2026-02-09_PLAN_phase2.md  2026-02-10_PLAN_interactive-review-tui.md  2026-02-11_IMPL_anki-connect.md  2026-02-11_PLAN_phase3.md  2026-02-11_PLAN_web-ui-poc.md  LICENSE_CHANGE_PLAN.md  long-document-processing-plan.md  next-features-handoff.md  pdf2anki-spec.md  provider-selection-architecture-briefing.md  provider-selection-handoff.md  provider-selection-root-cause-analysis.md  text-to-anki-research-report.md
docs/research/: image-extraction-examples.py  long-document-processing.md
evals/: dataset.yaml
src/pdf2anki/: __init__.py  anki_connect.py  batch.py  cache.py  config.py  convert.py  cost.py  extract.py  image.py  main.py  prompts.py  quality.py  schemas.py  section.py  service.py  structure.py  vision.py
tests/: conftest.py  test_anki_connect.py  test_batch.py  test_cache.py  test_config.py  test_convert.py  test_cost.py  test_e2e.py  test_eval.py  test_extract.py  test_image.py  test_license.py  test_main.py  test_prompts.py  test_quality.py  test_schemas.py  test_section.py  test_service.py  test_structure.py  test_tui_app.py  test_tui_launch.py  test_tui_state.py  test_vision.py  test_web_app.py
tests/fixtures/: sample.md  sample.txt
(+16 files in other folders)
