[project]
name = "pdf2anki"
version = "0.3.0"
description = "Generate high-quality Anki flashcards from PDF/TXT/MD using Claude AI"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "textual>=7.5.0",
]

[project.optional-dependencies]
ocr = [
    "ocrmypdf>=16.0.0",
]
web = [
    "gradio>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.11",
    "ruff>=0.8",
]

[project.scripts]
pdf2anki = "pdf2anki.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2anki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["pdf2anki"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
